# vectorizer

./: .env  .gitignore  .project.nvim  .vectorizer  Cargo.toml  README.md  env.ps1  justfile
scripts/: build.ps1  setup.sh
src/: cli.rs  configuration.rs  data_types.rs  database.rs  fragments.rs  indexer.rs  macros.rs  main.rs  matcher.rs  model.rs  qdrant.rs  vectorize.rs  walker.rs
utils/: convert_model.py
