[package]
name = "vectorizer"
version = "0.1.0"
edition = "2021"
authors = ["instance.id"]
publish = false 

[dependencies]
walkdir = "2"
log = "0.4.14"
clap = "4.1.13"
tonic = "0.9.2"
anyhow = "1.0.70"
serde_json = "1.0"
typenum = "1.15.0"
thiserror = "1.0.40"
path-absolutize = "3"
tiktoken-rs = "0.3.3"
lazy_static  = "1.4.0"
qdrant-client = "1.1.1"
serde = { version = "1.0", features = ["derive"] }
config = { version = "0.11.0", features = ["toml"] }
simplelog = { version = "0.11.2", features = ["paris"] }
uuid = { version = "1.3.2", features = ["serde", "v4", "v5"] }
tokio = { version = "1.28.0", features = ["rt-multi-thread"] }
rust-bert = {git = "https://github.com/guillaume-be/rust-bert.git"}
tokenizers = "0.13.2"
tch = "0.11.0"
chrono = "0.4.24"
